Skip to content

Qt intf: Do not duplicate the MSTRTIME_MAX_SIZE define

In modules/gui/qt/util/input_slider.hpp MSTRTIME_MAX_SIZE is defined again instead of including vlc_tick.h and using the existing define.

This could lead to problems in the future when MSTRTIME_MAX_SIZE is changed in vlc_tick.h but not in the input_slider.hpp.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information