Removes duplicate of MSTRTIME_MAX_SIZE

This was done by commenting out define MSTRTIME_MAX_SIZE
in input_slider.hpp

MSTRTIME_MAX_SIZE is already included via the seekstyle.hpp
input_slider.hpp imports seekstyle.hpp and hence has
MSTRTIME_MAX_SIZE

Closes #21952